--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
     <div class="card-body"><center>
       <h3 class="card-title">Lotus Herbals</h3>
       <img src="image/icons8-rupee-24.png" style="position:relative ;right: 50px; top:30px"><h3>399.00</h3>
-      <p class="card-text"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-half-empty-32 (3).png"><img src="image/icons8-star-half-empty-32 (3).png"></p></center><br>
-      <a href="order now.html"><button><img src="image/icons8-card-exchange-24.png">Order Now</button></a>
-      <a href="add to card.html"><button><img src="image/icons8-buy-24.png">Add to Card</button></a>
+      <p class="card-text"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-half-empty-32 (3).png"><img src="image/icons8-star-half-empty-32 (3).png"></p></center><br>
+      <a href="order now.html"><button><img src="beauty/icons8-card-exchange-24.png">Order Now</button></a>
+      <a href="add to card.html"><button><img src="beauty/icons8-buy-24.png">Add to Card</button></a>
     </div>
 </div>
 
@@ -236,9 +236,9 @@
 
       <img src="image/icons8-rupee-24.png" style="position:relative ;right: 50px; top:30px"><h3>499.00</h3>
 
-      <p class="card-text"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-half-empty-32 (3).png"> </p></center><br>
-      <a href="order now.html"><button><img src="image/icons8-card-exchange-24.png">Order Now</button></a>
-      <a href="add to card.html"><button><img src="image/icons8-buy-24.png">Add to Card</button></a>
+      <p class="card-text"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-half-empty-32 (3).png"> </p></center><br>
+      <a href="order now.html"><button><img src="beauty/icons8-card-exchange-24.png">Order Now</button></a>
+      <a href="add to card.html"><button><img src="beauty/icons8-buy-24.png">Add to Card</button></a>
     </div>
   </div>
   <div class="card" style="width: 18rem;"><h1 style="position: relative; left: 260px;"><img src="image/icons8-heart-24.png"></h1>
