--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-info navbar fixed-top"  >
     <div class="container-fluid">
-      <a class="navbar-brand" href="#" style="font-size: 30px;"><img src="beauty/icon8-beautician-64.png" height="40px" width="40px" style="position: relative;bottom: 6px;">Beautician</a>
+      <a class="navbar-brand" href="#" style="font-size: 30px;"><img src=""beauty/icons8-beautician-64.png" height="40px" width="40px" style="position: relative;bottom: 6px;">Beautician</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -241,118 +241,118 @@
       <a href="add to card.html"><button><img src="beauty/icons8-buy-24.png">Add to Card</button></a>
     </div>
   </div>
-  <div class="card" style="width: 18rem;"><h1 style="position: relative; left: 260px;"><img src="image/icons8-heart-24.png"></h1>
+  <div class="card" style="width: 18rem;"><h1 style="position: relative; left: 260px;"><img src="beauty/icons8-heart-24.png"></h1>
     <img src="image/colorobar.webp" class="card-img-top" alt="...">
     <div class="card-body"><center>
       <h3 class="card-title">Colorobar</h3>
-      <img src="image/icons8-rupee-24.png" style="position:relative ;right: 50px; top:30px"><h3>399.00</h3>
+      <img src="beauty/icons8-rupee-24.png" style="position:relative ;right: 50px; top:30px"><h3>399.00</h3>
 
-      <p class="card-text"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-half-empty-32 (3).png"></p></center><br>
-      <a href="order now.html"><button><img src="image/icons8-card-exchange-24.png">Order Now</button></a>
-      <a href="add to card.html"><button><img src="image/icons8-buy-24.png">Add to Card</button></a>
+      <p class="card-text"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-half-empty-32 (3).png"></p></center><br>
+      <a href="order now.html"><button><img src="beauty/icons8-card-exchange-24.png">Order Now</button></a>
+      <a href="add to card.html"><button><img src="beauty/icons8-buy-24.png">Add to Card</button></a>
     </div>
   </div>
-  <div class="card" style="width: 18rem;"><h1 style="position: relative; left: 260px;"><img src="image/icons8-heart-24.png"></h1>
+  <div class="card" style="width: 18rem;"><h1 style="position: relative; left: 260px;"><img src="beauty/icons8-heart-24.png"></h1>
     <img src="beauty/plum saffron.jpg" class="card-img-top" alt="...">
     <div class="card-body"><center>
       <h3 class="card-title">Plum Saffron</h3>
-      <img src="image/icons8-rupee-24.png" style="position:relative ;right: 50px; top:30px"><h3>669.00</h3>
+      <img src="beauty/icons8-rupee-24.png" style="position:relative ;right: 50px; top:30px"><h3>669.00</h3>
 
-      <p class="card-text"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-half-empty-32 (3).png"></p>
-      <a href="order now.html"><button><img src="image/icons8-card-exchange-24.png">Order Now</button></a>
-      <a href="add to card.html"><button><img src="image/icons8-buy-24.png">Add to Card</button></a>
+      <p class="card-text"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-half-empty-32 (3).png"></p>
+      <a href="order now.html"><button><img src="beauty/icons8-card-exchange-24.png">Order Now</button></a>
+      <a href="add to card.html"><button><img src="beauty/icons8-buy-24.png">Add to Card</button></a>
     </div>
   </div>
   </div>
   <div class="boos" style="display: flex;">
-  <div class="card" style="width: 18rem;"><h1 style="position: relative; left: 260px;"><img src="image/icons8-heart-24.png"></h1>
+  <div class="card" style="width: 18rem;"><h1 style="position: relative; left: 260px;"><img src="beauty/icons8-heart-24.png"></h1>
     <img src="beauty/lakme.jpg" class="card-img-top" alt="...">
     <div class="card-body"><center>
       <h3 class="card-title">Lakme</h3>
-      <img src="image/icons8-rupee-24.png" style="position:relative ;right: 50px; top:30px"><h3>499.00</h3>
+      <img src="beauty/icons8-rupee-24.png" style="position:relative ;right: 50px; top:30px"><h3>499.00</h3>
 
-      <p class="card-text"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-half-empty-32 (3).png"></p></center><br>
-      <a href="order now.html"><button><img src="image/icons8-card-exchange-24.png">Order Now</button></a>
-      <a href="add to card.html"><button><img src="image/icons8-buy-24.png">Add to Card</button></a>
+      <p class="card-text"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-half-empty-32 (3).png"></p></center><br>
+      <a href="order now.html"><button><img src="beauty/icons8-card-exchange-24.png">Order Now</button></a>
+      <a href="add to card.html"><button><img src="beauty/icons8-buy-24.png">Add to Card</button></a>
     </div>
   </div>
-  <div class="card" style="width: 18rem;"><h1 style="position: relative; left: 260px;"><img src="image/icons8-heart-24.png"></h1>
+  <div class="card" style="width: 18rem;"><h1 style="position: relative; left: 260px;"><img src="beauty/icons8-heart-24.png"></h1>
     <img src="beauty/lipstick.jpg" class="card-img-top" alt="...">
     <div class="card-body"><center>
       <h3 class="card-title">Lipstick</h3>
-      <img src="image/icons8-rupee-24.png" style="position:relative ;right: 50px; top:30px"><h3>399.00</h3>
+      <img src="beauty/icons8-rupee-24.png" style="position:relative ;right: 50px; top:30px"><h3>399.00</h3>
 
-      <p class="card-text"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-half-empty-32 (3).png"></p></center><br>
-      <a href="order now.html"><button><img src="image/icons8-card-exchange-24.png">Order Now</button></a>
-      <a href="add to card.html"><button><img src="image/icons8-buy-24.png">Add to Card</button></a>
+      <p class="card-text"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-half-empty-32 (3).png"></p></center><br>
+      <a href="order now.html"><button><img src="beauty/icons8-card-exchange-24.png">Order Now</button></a>
+      <a href="add to card.html"><button><img src="beauty/icons8-buy-24.png">Add to Card</button></a>
     </div>
   </div>
-  <div class="card" style="width: 18rem;"><h1 style="position: relative; left: 260px;"><img src="image/icons8-heart-24.png"></h1>
+  <div class="card" style="width: 18rem;"><h1 style="position: relative; left: 260px;"><img src="beauty/icons8-heart-24.png"></h1>
     <img src="beauty/Nivea soft light moisturizer.jpg" class="card-img-top" alt="..." height="290px" width="200px">
     <div class="card-body"><center>
       <h3 class="card-title">Nivea Moisturizer</h3>
-      <img src="image/icons8-rupee-24.png" style="position:relative ;right: 50px; top:30px"><h3>399.00</h3>
+      <img src="beauty/icons8-rupee-24.png" style="position:relative ;right: 50px; top:30px"><h3>399.00</h3>
 
-      <p class="card-text"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-half-empty-32 (3).png"></p>
-      <a href="order now.html"><button><img src="image/icons8-card-exchange-24.png">Order Now</button></a>
-      <a href="add to card.html"><button><img src="image/icons8-buy-24.png">Add to Card</button></a>
+      <p class="card-text"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-half-empty-32 (3).png"></p>
+      <a href="order now.html"><button><img src="beauty/icons8-card-exchange-24.png">Order Now</button></a>
+      <a href="add to card.html"><button><img src="beauty/icons8-buy-24.png">Add to Card</button></a>
     </div>
   </div>
-  <div class="card" style="width: 18rem;"><h1 style="position: relative; left: 260px;"><img src="image/icons8-heart-24.png"></h1>
+  <div class="card" style="width: 18rem;"><h1 style="position: relative; left: 260px;"><img src="beauty/icons8-heart-24.png"></h1>
     <img src="beauty/prep&prime.jpg" class="card-img-top" alt="...">
     <div class="card-body"><center>
       <h3 class="card-title">Prep & Prime</h3>
-      <img src="image/icons8-rupee-24.png" style="position:relative ;right: 50px; top:30px"><h3>299.00</h3>
+      <img src="beauty/icons8-rupee-24.png" style="position:relative ;right: 50px; top:30px"><h3>299.00</h3>
 
-      <p class="card-text"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-half-empty-32 (3).png"></p></center><br>
-      <a href="order now.html"><button><img src="image/icons8-card-exchange-24.png">Order Now</button></a>
-      <a href="add to card.html"><button><img src="image/icons8-buy-24.png">Add to Card</button></a>
+      <p class="card-text"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-half-empty-32 (3).png"></p></center><br>
+      <a href="order now.html"><button><img src="beauty/icons8-card-exchange-24.png">Order Now</button></a>
+      <a href="add to card.html"><button><img src="beauty/icons8-buy-24.png">Add to Card</button></a>
     </div>
   </div>
 </div>
 <div class="boos" style="display: flex;">
-<div class="card" style="width: 18rem;"><h1 style="position: relative; left: 260px;"><img src="image/icons8-heart-24.png"></h1>
+<div class="card" style="width: 18rem;"><h1 style="position: relative; left: 260px;"><img src="beauty/icons8-heart-24.png"></h1>
     <img src="beauty/serums.webp" class="card-img-top" alt="...">
     <div class="card-body"><center>
       <h3 class="card-title">Serums</h3>
-      <img src="image/icons8-rupee-24.png" style="position:relative ;right: 50px; top:30px"><h3>500.00</h3>
+      <img src="beauty/icons8-rupee-24.png" style="position:relative ;right: 50px; top:30px"><h3>500.00</h3>
 
-      <p class="card-text"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-half-empty-32 (3).png"></p></center><br>
-      <a href="order now.html"><button><img src="image/icons8-card-exchange-24.png">Order Now</button></a>
-      <a href="add to card.html"><button><img src="image/icons8-buy-24.png">Add to Card</button></a>
+      <p class="card-text"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-half-empty-32 (3).png"></p></center><br>
+      <a href="order now.html"><button><img src="beauty/icons8-card-exchange-24.png">Order Now</button></a>
+      <a href="add to card.html"><button><img src="beauty/icons8-buy-24.png">Add to Card</button></a>
     </div>
   </div>
-  <div class="card" style="width: 18rem;"><h1 style="position: relative; left: 260px;"><img src="image/icons8-heart-24.png"></h1>
+  <div class="card" style="width: 18rem;"><h1 style="position: relative; left: 260px;"><img src="beauty/icons8-heart-24.png"></h1>
     <img src="beauty/sunscreen.jpg" class="card-img-top" alt="..." height="290px" width="200px">
     <div class="card-body"><center>
       <h3 class="card-title">Sunscreem</h3>
-      <img src="image/icons8-rupee-24.png" style="position:relative ;right: 50px; top:30px"><h3>500.00</h3>
+      <img src="beauty/icons8-rupee-24.png" style="position:relative ;right: 50px; top:30px"><h3>500.00</h3>
 
-      <p class="card-text"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-half-empty-32 (3).png"></p></center><br>
-      <a href="order now.html"><button><img src="image/icons8-card-exchange-24.png">Order Now</button></a>
-      <a href="add to card.html"><button><img src="image/icons8-buy-24.png">Add to Card</button></a>
+      <p class="card-text"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-half-empty-32 (3).png"></p></center><br>
+      <a href="order now.html"><button><img src="beauty/icons8-card-exchange-24.png">Order Now</button></a>
+      <a href="add to card.html"><button><img src="beauty/icons8-buy-24.png">Add to Card</button></a>
     </div>
   </div>
-  <div class="card" style="width: 18rem;"><h1 style="position: relative; left: 260px;"><img src="image/icons8-heart-24.png"></h1>
+  <div class="card" style="width: 18rem;"><h1 style="position: relative; left: 260px;"><img src="beauty/icons8-heart-24.png"></h1>
     <img src="image/face canada.jpg" class="card-img-top" alt="..." height="290px" width="200px">
     <div class="card-body"><center>
       <h3 class="card-title">Face Canada</h3>
-      <img src="image/icons8-rupee-24.png" style="position:relative ;right: 50px; top:30px"><h3>400.00</h3>
+      <img src="beauty/icons8-rupee-24.png" style="position:relative ;right: 50px; top:30px"><h3>400.00</h3>
 
-      <p class="card-text"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-half-empty-32 (3).png"></p></center><br>
-      <a href="order now.html"><button><img src="image/icons8-card-exchange-24.png">Order Now</button></a>
-      <a href="add to card.html"><button><img src="image/icons8-buy-24.png">Add to Card</button></a>
+      <p class="card-text"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-half-empty-32 (3).png"></p></center><br>
+      <a href="order now.html"><button><img src="beauty/icons8-card-exchange-24.png">Order Now</button></a>
+      <a href="add to card.html"><button><img src="beauty/icons8-buy-24.png">Add to Card</button></a>
     </div>
   </div>
-  <div class="card" style="width: 18rem;"><h1 style="position: relative; left: 260px;"><img src="image/icons8-heart-24.png"></h1>
+  <div class="card" style="width: 18rem;"><h1 style="position: relative; left: 260px;"><img src="beauty/icons8-heart-24.png"></h1>
     <img src="image/Edu de parfum.webp" class="card-img-top" alt="...">
     <div class="card-body"><center>
       <h3 class="card-title">Edu De Parfum</h3>
-      <img src="image/icons8-rupee-24.png" style="position:relative ;right: 50px; top:30px"><h3>499.00</h3>
+      <img src="beauty/icons8-rupee-24.png" style="position:relative ;right: 50px; top:30px"><h3>499.00</h3>
 
       <p class="card-text"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-30 (2).png"><img src="image/icons8-star-half-empty-32 (3).png"></p></center><br>
-      <a href="order now.html"><button><img src="image/icons8-card-exchange-24.png">Order Now</button></a>
-      <a  href="add to card.html"><button><img src="image/icons8-buy-24.png">Add to Card</button></a>
+      <a href="order now.html"><button><img src="beauty/icons8-card-exchange-24.png">Order Now</button></a>
+      <a  href="add to card.html"><button><img src="beauty/icons8-buy-24.png">Add to Card</button></a>
     </div>
   </div>
   </div>
