--- a/fragrance.html
+++ b/fragrance.html
@@ -56,7 +56,7 @@
           </li>
         </ul>
         <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder= "Search" aria-label="Search;"><img src="image/icons8-search-24 (1).png" style="position: relative;right: 50px;">
+          <input class="form-control me-2" type="search" placeholder= "Search" aria-label="Search;"><img src="beauty/icons8-search-24 (1).png" style="position: relative;right: 50px;">
         </form>
       </div>
     </div>
@@ -76,7 +76,7 @@
         <div class="card-body"><center>
           <h3 class="card-title"style="color: green;">Chocolate perfume</h3>
           <img src="beauty/icons8-rupee-24.png" style="position:relative ;right: 50px; top:30px;" ><h3>399.00</h3>
-      <p class="card-text"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-half-empty-32 (3).png"><img src="image/icons8-star-half-empty-32 (3).png"></p>
+      <p class="card-text"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-30 (2).png"><img src="beauty/icons8-star-half-empty-32 (3).png"><img src="beauty/icons8-star-half-empty-32 (3).png"></p>
           <a href="order now.html" class="btn btn-primary">Buy Now</a></center>
         </div>
       </div>
